@@ -4,7 +4,7 @@ use warnings;
 use 5.010;
 use utf8;
 
-our $VERSION = '3.01';
+our $VERSION = '3.02';
 
 binmode( STDOUT, ':encoding(utf-8)' );
 
@@ -605,7 +605,7 @@ B<efa-m> [B<-s> I<service>] I<tripid>
 
 =head1 VERSION
 
-version 3.01
+version 3.02
 
 =head1 DESCRIPTION
 
