@@ -1,4 +1,4 @@
-git HEAD
+Travel::Status::DE::VRR 3.02 - Wed Oct 16 2024
 
     * Stop: Add ar_delay, dep_delay, delay, stop_id accessos
     * EFA: Fix place_candidates
@@ -7,6 +7,7 @@ git HEAD
     * efa-m: Add -j / --with-jid option
     * efa-m -Oa, -Ob, -Of: Show delays
     * EFA, efa-m: Add stopfinder ("?foo") and stop search ("lat:lon") modes
+    * Add ...::Trip and ...::Info modules
     * Info, Stop, Trip: Note that the API of these modules is not yet final
       and may change between minor versions
 
